# RidesFX

./: .gitignore  README.md  ShareTrip (1).mdj  ShareTrip.mdj  config.properties  pom.xml  shareTrip.mv.db  shareTrip.trace.db
.github/workflows/: maven.yml
db/: shareTrip.mv.db
exportToHTML/views/: Register.fxml.html
server/api/: Cargo.toml  README.md
server/api/src/: request_api.rs
server/server/: Cargo.toml  README.md
server/server/src/: socket_server.rs
src/: ShareTrip (2).mdj
src/documentation/: ShareTrip (1).mdj  ShareTrip.mdj
src/documents/: ShareTrip.mdj
src/main/java/: module-info.java
src/main/java/businessLogic/: BlFacade.java  BlFacadeImplementation.java  BusinessLogicServer.java
src/main/java/dataAccess/: DataAccess.java
src/main/java/domain/: Driver.java  Ride.java
src/main/java/exceptions/: RideAlreadyExistException.java  RideMustBeLaterThanTodayException.java
src/main/java/ui/: ApplicationLauncher.java  MainGUI.java
src/main/java/uicontrollers/: CreateRideController.java  IdentificationController.java  LoginController.java  MainGUIController.java  QueryRidesController.java  RegisterController.java
src/main/java/utils/: Dates.java
src/main/resources/: CreateRide.fxml  Etiquetas_en.properties  Etiquetas_es.properties  Etiquetas_eus.properties  Identification.fxml  Login.fxml  MainGUI.css  MainGUI.fxml  QueryRides.fxml  Register.fxml  fontstyle.css  hibernate.cfg.xml  log4j2.xml  main.css
src/main/resources/views/: CarPoolChat.fxml  CreateRide.fxml  DriverRidePanel.fxml  Login.fxml  MainGUI.fxml  QueryAlerts.fxml  (+3 more)
(+31 files in other folders)
